--- a/system/src/main/resources/application.properties
+++ b/system/src/main/resources/application.properties
@@ -2,3 +2,5 @@
 spring.application.name=system
 ##应该端口，业务端口号尽量保持连续
 server.port=9001
+##注册中心地址
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
