1，新增gateway子模块，增加gateway依赖，并注册到注册中心

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,8 @@
 	<modules>
 		<module>eureka</module>
 		<module>system</module>
-	</modules>
+        <module>gateway</module>
+    </modules>
 	<!--父模块是springboot项目-->
 	<parent>
 		<groupId>org.springframework.boot</groupId>
