1，在gateway增加system路由转发配置，调试成功

--- a/system/src/main/resources/application.properties
+++ b/system/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 ##应用名称
 spring.application.name=system
+##全局url路径
+server.servlet.context-path=/system
 ##应该端口，业务端口号尽量保持连续
 server.port=9001
 ##注册中心地址
