--- a/system/src/main/resources/application.properties
+++ b/system/src/main/resources/application.properties
@@ -6,3 +6,9 @@ server.servlet.context-path=/system
 server.port=9001
 ##注册中心地址
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+
+# 数据库连接
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/courseyfsh?characterEncoding=UTF8&autoReconnect=true
+spring.datasource.username=courseyfsh
+spring.datasource.password=courseyfsh
