--- a/system/src/main/resources/application.properties
+++ b/system/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/courseyfsh?characterEncoding=UTF8&autoReconnect=true
 spring.datasource.username=courseyfsh
 spring.datasource.password=courseyfsh
+
+#mybatisµÄmapper.xmlµÄÂ·¾¶
+mybatis.mapper-locations=classpath:/mapper/*.xml
