--- a/system/src/main/resources/application.properties
+++ b/system/src/main/resources/application.properties
@@ -15,3 +15,7 @@ spring.datasource.password=courseyfsh
 
 #mybatis的mapper.xml的路径
 mybatis.mapper-locations=classpath:/mapper/*.xml
+
+#对com.yfsh.system.mapper包使用trace日志级别
+#trace可以打印执行的sql和执行的结果
+logging.level.com.yfsh.system.mapper=trace
