--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,13 @@
 				<artifactId>mysql-connector-java</artifactId>
 				<version>5.1.37</version>
 			</dependency>
+
+            <!--server公共模块-->
+            <dependency>
+                <groupId>com.yfsh</groupId>
+                <artifactId>server</artifactId>
+                <version>0.0.1-SNAPSHOT</version>
+            </dependency>
 		</dependencies>
 	</dependencyManagement>
 
